--- a/src/app/word-stuffing-root/word-stuffing-root.html
+++ b/src/app/word-stuffing-root/word-stuffing-root.html
@@ -1,8 +1,10 @@
-<p>word-stuffing-root works2!</p>
+<p>word-stuffing-root works3!</p>
+<app-util-voice (valeurEnvoyee)="setVoice($event)"></app-util-voice>
 <input type="file" #fileInput style="display: none" (change)="onFileSelected($event)" />
 <button (click)="fileInput.click()">Choisir un fichier</button>
 <p>Fichier sélectionné : {{ fileName }}</p>
-<button (click)="next()">Next</button><button (click)="previous()">Previous</button>
+<button (click)="previous()">Previous</button>
+<button (click)="next()">Next</button>
 <h2>{{currentWord?.langageCible}}</h2>
 
 <button (click)="displayTraduction()">Traduction</button>
@@ -10,5 +12,7 @@
 @if (displayTraductionFlag) {
  <p>{{ currentWord?.langageTraduction }}</p>
 }
+<p></p>
+{{voice}}
 
 
