--- a/src/app/word-stuffing-root/util-voice/util-voice.html
+++ b/src/app/word-stuffing-root/util-voice/util-voice.html
@@ -1,9 +1,10 @@
-<p>select voice: <button (click)="speak()">Parler</button>
- select  voice:
-<select [(ngModel)]="selectedVoiceName"  (ngModelChange)="onVoiceChange($event)">
+<p>select voice:
+
+<select *ngIf="voices.length > 0"  [(ngModel)]="selectedVoiceName"  (ngModelChange)="onVoiceChange($event)">
       <option *ngFor="let voice of voices" [ngValue]="voice">
         {{ voice.name }} :1:lang: ({{ voice.lang }})
       </option>
 </select>
+<button (click)="speak()">Parler</button>
 </p>
 
