--- a/src/app/word-stuffing-root/word-stuffing-root.html
+++ b/src/app/word-stuffing-root/word-stuffing-root.html
@@ -1,9 +1,10 @@
-<p>word-stuffing-root works3!</p>
+
 <app-util-voice (valeurEnvoyee)="setVoice($event)"></app-util-voice>
 <input type="file" #fileInput style="display: none" (change)="onFileSelected($event)" />
 <button (click)="fileInput.click()">Choisir un fichier</button>
 <p>Fichier sélectionné : {{ fileName }}</p>
 <button (click)="previous()">Previous</button>
+<button (click)="repeat()">Repeat</button>
 <button (click)="next()">Next</button>
 <h2>{{currentWord?.langageCible}}</h2>
 
