--- a/src/app/word-stuffing-root/util-voice/util-voice.html
+++ b/src/app/word-stuffing-root/util-voice/util-voice.html
@@ -1,8 +1,8 @@
 <p>select voice:
 
-<select *ngIf="voices.length > 0"  [(ngModel)]="selectedVoiceName"  (ngModelChange)="onVoiceChange($event)">
+<select   [(ngModel)]="selectedVoiceName"  (ngModelChange)="onVoiceChange($event)">
       <option *ngFor="let voice of voices" [ngValue]="voice">
-        {{ voice.name }} :1:lang: ({{ voice.lang }})
+        {{ voice.name }}
       </option>
 </select>
 <button (click)="speak()">Parler</button>
