--- a/src/app/word-stuffing-root/word-stuffing-root.html
+++ b/src/app/word-stuffing-root/word-stuffing-root.html
@@ -1,5 +1,5 @@
 
-<app-util-voice (valeurEnvoyee)="setVoice($event)"></app-util-voice>
+<app-util-voice (voiceEnvoyee)="setVoice($event)" (rateEnvoyee)="setRate($event)"></app-util-voice>
 <input type="file" #fileInput style="display: none" (change)="onFileSelected($event)" />
 <button (click)="fileInput.click()">Choisir un fichier</button>
 <p>Fichier sélectionné : {{ fileName }}</p>
