--- a/src/app/word-stuffing-root/word-stuffing-root.html
+++ b/src/app/word-stuffing-root/word-stuffing-root.html
@@ -11,6 +11,7 @@
 <h2>{{currentWord?.langageCible}}</h2>
 
 <button (click)="displayTraduction()">Traduction</button>
+<button (click)="saveWord()">Save Local</button>
 
 @if (displayTraductionFlag) {
  <p>{{ currentWord?.langageTraduction }}</p>
