--- a/src/app/word-stuffing-root/util-voice/util-voice.html
+++ b/src/app/word-stuffing-root/util-voice/util-voice.html
@@ -1,15 +1,27 @@
 <p>
-<label for="voices">select voice: </label>
-<select  id="voices" [(ngModel)]="selectedVoice"  (ngModelChange)="onVoiceChange($event)">
-      <option *ngFor="let voice of voices" [ngValue]="voice">
-        {{ voice.name }}
-      </option>
-</select>
+  <label for="voices">select voice: </label>
+  <select
+    id="voices"
+    [(ngModel)]="selectedVoice"
+    (ngModelChange)="onVoiceChange($event)"
+  >
+    <option *ngFor="let voice of voices" [ngValue]="voice">
+      {{ voice.name }}
+    </option>
+  </select>
+</p>
+
 <p>
   <label for="rate">Rate:</label>
-  <input type="number" id="rate" [(ngModel)]="rate" (ngModelChange)="onRateChange($event)" min="0.1" max="10" step="0.2">
-  <p>
-    <input type="string" id="text" [(ngModel)]="text">
-<button (click)="speak()">Parler</button>
+  <input
+    type="number"
+    id="rate"
+    [(ngModel)]="rate"
+    (ngModelChange)="onRateChange($event)"
+    min="0.1"
+    max="10"
+    step="0.2"
+  />
 </p>
+
 
