--- a/src/app/word-stuffing-root/util-voice/util-voice.html
+++ b/src/app/word-stuffing-root/util-voice/util-voice.html
@@ -1,6 +1,9 @@
-<p>
-  <label for="voices">select voice: </label>
-  <select
+<div>
+  <h2>Voice Configuration</h2>
+</div>
+<div class="configuration-container">
+  <label class="configuration-label" for="voices">select voice: </label>
+  <select class="configuration-input"
     id="voices"
     [(ngModel)]="selectedVoice"
     (ngModelChange)="onVoiceChange($event)"
@@ -9,11 +12,11 @@
       {{ voice.name }}
     </option>
   </select>
-</p>
+</div>
 
-<p>
-  <label for="rate">Rate:</label>
-  <input
+<div class="configuration-container">
+  <label class="configuration-label" for="rate">Voice rate:</label>
+  <input class="configuration-input"
     type="number"
     id="rate"
     [(ngModel)]="rate"
@@ -22,6 +25,4 @@
     max="10"
     step="0.2"
   />
-</p>
-
-
+</div>
