--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,7 +4,7 @@
 <main class="main">
   <div class="content">
     <div class="left-side">
-      <h1> {{ title }}</h1>
+      <h1> {{ title }}</h1>v1
       <word-stuffing-root/>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
