--- a/src/app/word-stuffing-root/bg-google-drive/bg-google-drive.html
+++ b/src/app/word-stuffing-root/bg-google-drive/bg-google-drive.html
@@ -1,6 +1,7 @@
-<div>bg-google-drive works!
+<div>
     <div>
       <button (click)="bgCheckDrive()">Check Drive</button>
+     <button (click)="bgSaveVocabulaire()">Save Vocabulaire</button>
     </div>
 
 </div>
