--- a/src/app/word-stuffing-root/bg-google-drive/bg-google-drive.html
+++ b/src/app/word-stuffing-root/bg-google-drive/bg-google-drive.html
@@ -9,7 +9,7 @@
 
           <button (click)="bgDeleteFileInDrive(item.id)">del</button>
            <button (click)="bgRenameFileInDrive(item.id)">rename</button>
-          <button (click)="bgDisplay(item.id)">display</button>
+          <button (click)="bgDisplayFile(item.id)">display</button>
            {{ item.name }}
 
         </li>
