--- a/src/app/app.css
+++ b/src/app/app.css
@@ -8,7 +8,25 @@
   flex: 2; /* 2 parts */
 }
 
+
+
 .right-side {
   border: 1px solid blue;
   flex: 1; /* 1 part */
+}
+
+.header {
+  border: 5px solid green;
+  flex: 2;
+  flex-wrap: wrap; /* Permet de basculer en colonne sur petit écran */
+  align-items: center; /* Centre verticalement */
+  display: flex;
+  justify-content: space-around; /* Espace entre le titre et la version */
+
+}
+
+.title {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #333;
 }
