--- a/src/app/word-stuffing-root/word-stuffing-root.css
+++ b/src/app/word-stuffing-root/word-stuffing-root.css
@@ -38,5 +38,17 @@
 }
 
 
+.unit {
+  margin: 3px; /* espace autour de chaque unité */
+  padding: 10px; /* espace intérieur */
+  border: 1px solid #ccc; /* bordure légère */
+  border-radius: 5px; /* coins arrondis */
+  background-color: #f9f9f9; /* fond clair */
+}
 
+.unit-title {
+  font-weight: bold; /* Met le titre en gras */
+  display: block; /* Affiche le titre sur une nouvelle ligne */
+  margin-bottom: 5px; /* Espace entre le titre et le contenu */
+}
 
