--- a/src/app/word-stuffing-root/util-voice/util-voice.html
+++ b/src/app/word-stuffing-root/util-voice/util-voice.html
@@ -26,3 +26,15 @@
     step="0.2"
   />
 </div>
+<div class="configuration-container">
+  <label class="configuration-label" for="volume">Voice volume:</label>
+  <input class="configuration-input"
+    type="number"
+    id="volume"
+    [(ngModel)]="volume"
+    (ngModelChange)="onVolumeChange($event)"
+    min="0.1"
+    max="1"
+    step="0.1"
+  />
+</div>
