--- a/src/app/word-stuffing-root/bg-google-drive/bg-google-drive.html
+++ b/src/app/word-stuffing-root/bg-google-drive/bg-google-drive.html
@@ -1,6 +1,7 @@
 <div>
   <div>
     <button (click)="bgCheckDrive()">Sign In</button>
+    <button (click)="bgCheckShare()">Share</button>
     <button (click)="bgSaveVocabulaire()">Save Vocabulaire</button>
     <div>
       <ul *ngIf="files.length > 0; else noItems">
@@ -10,6 +11,8 @@
           <button (click)="bgDeleteFileInDrive(item.id)">del</button>
           <button (click)="bgRenameFileInDrive(item.id)">rename</button>
           <button (click)="bgShareFile(item.id)">share</button>
+          <button (click)="bgDetailFile(item)">detail</button>
+          <button (click)="bgViewContentFile(item)">content</button>
           <button (click)="bgDisplayFile(item.id)">display</button>
            {{ bgCleanName(item.name) }}
 
