ai request gemini Rest

--- a/src/app/word-stuffing-root/bg-google-translate/bg-google-translate.html
+++ b/src/app/word-stuffing-root/bg-google-translate/bg-google-translate.html
@@ -1,4 +1,4 @@
-<div>
+<div class="containerTranslate">
    <button (click)="translateCurrentWord()">Translate Current Word By Google Translate</button>
    <span>{{wordTranslated}}</span>
-</div>>
+</div>
