--- a/src/app/word-stuffing-root/bg-google-chat-gpt/bg-google-chat-gpt.html
+++ b/src/app/word-stuffing-root/bg-google-chat-gpt/bg-google-chat-gpt.html
@@ -1,5 +1,6 @@
-<p>bg-google-chat-gpt works!</p>
+
 <button (click)="checkSentenceByChatGpt()">check Sentence By Chat Gpt</button>
+<textarea [formControl]="userInput" rows="4" cols="30"></textarea>
 response: {{response}}
 <div>
 url:{{urlGemini}}
