--- a/src/app/word-stuffing-root/word-stuffing-root.html
+++ b/src/app/word-stuffing-root/word-stuffing-root.html
@@ -9,11 +9,13 @@
         (change)="onFileSelected($event)"
       />
       <button (click)="fileInput.click()">Choose a file</button>
-      <span>Fichier sélectionné: {{ fileName }}</span>
+      <span *ngIf="fileName">Fichier sélectionné: {{ fileName }}</span>
     </div>
     <div class ="unit">
       <span class="unit-title">Local Storage :</span>
       <button (click)="localStorage()">Local Storage</button>
+      <button (click)="cleanLocalStorage()">Clean storage</button>
+      <button (click)="saveWord()">Save Local</button>
       <span>number of words in local storage: {{ biLangageWordsArrayLocal.length || 0 }}</span>
     </div>
     <div class="unit">
@@ -48,8 +50,8 @@
     <div class="word-container">
       <input type="checkbox"  (click)="modeTraductionChange($event)"  >
       <button (click)="displayTraduction()">Traduction</button>
-      <button (click)="saveWord()">Save Local</button>
-      <button (click)="cleanLocalStorage()">Clean storage</button>
+
+
       <app-bg-google-translate
         [currentWord]="currentWord"
         [token]="token"
