--- a/src/app/word-stuffing-root/bg-google-chat-gpt/bg-google-chat-gpt.html
+++ b/src/app/word-stuffing-root/bg-google-chat-gpt/bg-google-chat-gpt.html
@@ -1,6 +1,7 @@
 <div>
-  <textarea [formControl]="userInput" rows="4" cols="30"></textarea>
+  <span>Writte a sentence:</span>
+  <textarea [formControl]="userInput" rows="1" cols="30"></textarea>
   <button (click)="checkSentenceByChatGpt()">check Sentence By Chat Gpt</button>
   response: {{corrected}}
-  <div>url:{{urlGemini}}</div>
+
 </div>
