--- a/src/app/word-stuffing-root/word-stuffing-root.html
+++ b/src/app/word-stuffing-root/word-stuffing-root.html
@@ -2,21 +2,19 @@
   <div class="left-side">
     <div class="unit">
       <span class="unit-title">File System :</span>
-      <input
-        type="file"
-        #fileInput
-        style="display: none"
-        (change)="onFileSelected($event)"
+      <app-bg-file-system
+         (wordsChange)="onWordsArrayChanged($event)"
       />
-      <button (click)="fileInput.click()">Choose a file</button>
-      <span *ngIf="fileName">Fichier sélectionné: {{ fileName }}</span>
     </div>
-    <div class ="unit">
+    <div class="unit">
       <span class="unit-title">Local Storage :</span>
       <button (click)="localStorage()">Local Storage</button>
       <button (click)="cleanLocalStorage()">Clean storage</button>
-      <button (click)="saveWord()">Save Local</button>
-      <span>number of words in local storage: {{ biLangageWordsArrayLocal.length || 0 }}</span>
+      <button (click)="saveWord()">Save current word</button>
+      <span
+        >number of words in local storage: {{ biLangageWordsArrayLocal.length ||
+        0 }}</span
+      >
     </div>
     <div class="unit">
       <span class="unit-title">Google Drive :</span>
@@ -27,7 +25,7 @@
       />
     </div>
     <hr />
-    <div class ="unit">
+    <div class="unit">
       <span class="unit-title">Text to Speech :</span>
       <label for="text">Texte à lire :</label>
       <input type="string" id="text" [(ngModel)]="text" />
@@ -48,9 +46,13 @@
 
     <h2 *ngIf="currentWord">{{ currentWord.langageCible }}</h2>
     <div class="word-container">
-      <input type="checkbox"  (click)="modeTraductionChange($event)"  >
-      <button (click)="displayTraduction()">Traduction</button>
-
+      <div>
+        <input type="checkbox" (click)="modeTraductionChange($event)" />
+        <button (click)="displayTraduction()">Traduction</button>
+        @if (displayTraductionFlag) {
+        <span>{{ currentWord.langageTraduction }}</span>
+        }
+      </div>
 
       <app-bg-google-translate
         [currentWord]="currentWord"
@@ -58,14 +60,10 @@
         (traductionChange)="onTraductionChange($event)"
       />
     </div>
-    @if (displayTraductionFlag) {
-    <p>{{ currentWord.langageTraduction }}</p>
-    }
-    <app-bg-google-chat-gpt
 
-    />
+    <app-bg-google-chat-gpt />
     <p></p>
-    {{voice}}
+
   </div>
   <div class="right-side">
     <app-util-voice
