--- a/src/app/word-stuffing-root/word-stuffing-root.html
+++ b/src/app/word-stuffing-root/word-stuffing-root.html
@@ -22,7 +22,12 @@
         (tokenChange)="onTokenChange($event)"
       />
     </div>
+    <div class="unit">
+      <span class="unit-title">Generate Words By IA:</span>
+      <app-bg-generate-words-ia
 
+      />
+    </div>
     <div class="unit">
       <span class="unit-title">Input :</span>
       <label for="text">text :</label>
@@ -63,7 +68,7 @@
     </div>
 
     <app-bg-google-chat-gpt />
-  </div>
+
   <div class="right-side">
     <div class="unit">
       <app-bg-config-langage
