--- a/src/app/word-stuffing-root/word-stuffing-root.html
+++ b/src/app/word-stuffing-root/word-stuffing-root.html
@@ -25,7 +25,7 @@
     <div class="unit">
       <span class="unit-title">Generate Words By IA:</span>
       <app-bg-generate-words-ia
-
+          (wordsChange)="onWordsArrayChanged($event)"
       />
     </div>
     <div class="unit">
