--- a/src/app/word-stuffing-root/bg-google-chat-gpt/bg-google-chat-gpt.html
+++ b/src/app/word-stuffing-root/bg-google-chat-gpt/bg-google-chat-gpt.html
@@ -24,7 +24,7 @@
       <textarea  [formControl]="userInput" rows="4" cols="30"></textarea>
     </div>
     <div class="sectionGpt">
-      <button (click)="checkSentenceByChatGpt()">check Sentence By AI</button>
+      <button (click)="checkSentenceByChatGpt()">check Sentence By gemini-2.0-flash</button>
       response: {{corrected}}
     </div>
 
