--- a/src/app/word-stuffing-root/bg-google-chat-gpt/bg-google-chat-gpt.html
+++ b/src/app/word-stuffing-root/bg-google-chat-gpt/bg-google-chat-gpt.html
@@ -1,3 +1,5 @@
+
+<p><strong>chat  with gemini :</strong> (You need to have been authorized by admin)</p>
 <div class="unit containerGpt">
 
     <div class="sectionGpt alignRight">
