--- a/src/app/word-stuffing-root/open-router-chat-json/open-router-chat-json.html
+++ b/src/app/word-stuffing-root/open-router-chat-json/open-router-chat-json.html
@@ -1,4 +1,4 @@
-<p><strong>chat avec json request :</strong> </p>
+<p><strong>chat  via OpenRouter :</strong> (you need a token openRouter and select a model)</p>
 <ngx-json-viewer [json]="responseJson" [expanded]="true" [depth]="3"></ngx-json-viewer>
 
 <div class="table">
