--- a/src/app/word-stuffing-root/open-router-list-models/open-router-list-models.html
+++ b/src/app/word-stuffing-root/open-router-list-models/open-router-list-models.html
@@ -1,6 +1,6 @@
 <p>list-models</p>
 <div *ngIf="models?.length">
-      <h3>Modèles disponibles :</h3>
+      <h3>Modèles disponibles par OpenRouter:</h3>
       <label for="provider">Filtrer par fournisseur :</label>
       <select id="provider" [(ngModel)]="selectedProvider" (change)="applyFilter()">
           <option value="">— Tous —</option>
