--- a/src/app/word-stuffing-root/word-stuffing-root.html
+++ b/src/app/word-stuffing-root/word-stuffing-root.html
@@ -74,7 +74,7 @@
 
     <app-bg-google-chat-gpt />
 
-     <div class="bgComponent">
+     <div class="unit">
         <app-open-router-chat-json></app-open-router-chat-json>
       </div>
 
